src/test/resources/amyc/parser/failing/TypeWidth.grading.amy
object TypeWidth
  fn foo(): Boolean(32) = { true }
end TypeWidth